# ZipExtract

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
include/: registryhelper.h  zipextractor.h
qml/: Extractor.qml  Main.qml
src/: main.cpp  registryhelper.cpp  zipextractor.cpp
tools/: installer.iss
